client/src/components/Nav/Nav.css
.nav{
background-color: black;
height: 80px;
display: flex;
justify-content: flex-start;
align-items: center;
}

.menu-bars {
    margin-left: 20px;
    font-size: 20px;
    color: white;
    background-color: black;
}

.navMenu {
    background-color: black;
    height: 100vh;
    list-style-type: none;
    width: 250px;
    display: flex;
    justify-content: center;
    position: fixed;
    top: 0;
    left: -100%;
    transition: 200ms;
}

.navMenu.active {
    left: 0;
    transition: 200ms;
}

.navText {
    padding: 50px 20px 40px 16px;
    /* justify-content: start; */
 display: flex;
}

.navText a{
    text-decoration: none;
    color: burlywood;
    font-size: 20px;
    width: 95%;
    /* height: 100%; */
    /* display: flex; */
    align-items: center;
    /* padding: 0 16px; */
    border-radius: 4px;
}

.navText a:hover{
    background: burlywood;
    color: black;
}

